# vulkan_rogue

./: .#plan.org  .gitignore  .gitignore~  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  GNUmakefile  Makefile  README.md  cmake_install.cmake  docs.org  make.rb  make.rb~  plan.org  rogue  test  textures.tar
data/: controls.txt
lua/: controls.lua  controls.lua~  controls_handler.lua  data.lua  rogue_lib.lua  tile_picker.lua  vkterm_lib.lua
shaders/: .#shader.vert  frag.spv  shader.frag  shader.frag~  shader.vert  vert.spv
src/: #drawing.c#  .#drawing.c  action.c  action.h  bitmap.c  bitmap.h  config.c  config.h  controls.c  controls.h  controls.nc  drawing.c  drawing.h  fov.c  fov.h  gfx_input.c  gfx_input.h  gfx_input.h~  input.c  input.h  key_codes.h  lua_interface.c  lua_interface.h  macros.h  main.c  main.c~  maths.h  mystdlib.c  mystdlib.h  mystdlib.h~  textures.c  textures.h  vulkan_helper.c  vulkan_helper.h  vulkan_meta.c  vulkan_meta.h  vulkan_public.c  vulkan_public.h  world.c  world.h
src/vkterm/: #vkterm.c#  drawing.c  drawing.c~  drawing.h~  input.c  input.c~  input.h  textures.c  textures.h  textures.h~  vk_config.h  vk_config.h~  vk_maths.h  vk_terminal.h~  vkterm.h  vkterm.h~  vkterm_private.c  vkterm_private.c~  vkterm_private.h  vkterm_private.h~
textures/: forest.uv  spleen-8x16-437-custom.bdf
